@@ -3,6 +3,7 @@
   + document update
   + reviewed and adjusted the debug levels
   + id_lookup.c: id_lookup_tail() introduced to removed the fix coded offset
+  + improved filter to block unwanted/fake media files
 
 20120813:
   + Replaced FF_I_TYPE by AV_PICTURE_TYPE_I since it was deprecated
